--- a/cms-student-side/nbproject/project.properties
+++ b/cms-student-side/nbproject/project.properties
@@ -28,11 +28,14 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-email-1.5.jar=C:\\Users\\Dell\\.vscode\\commons-email-1.5.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\Dell\\.vscode\\commons-logging-1.2.jar
 file.reference.fluent-hc-4.5.5.jar=C:\\Users\\Dell\\.vscode\\fluent-hc-4.5.5.jar
 file.reference.gson-2.8.2.jar=C:\\Users\\Dell\\.vscode\\gson-2.8.2.jar
 file.reference.httpclient-4.5.5.jar=C:\\Users\\Dell\\.vscode\\httpclient-4.5.5.jar
 file.reference.httpcore-4.4.9.jar=C:\\Users\\Dell\\.vscode\\httpcore-4.4.9.jar
+file.reference.jakarta.activation-api-2.0.1.jar=C:\\Users\\Dell\\.vscode\\jakarta.activation-api-2.0.1.jar
+file.reference.jakarta.mail-2.0.1.jar-1=C:\\Users\\Dell\\.vscode\\jakarta.mail-2.0.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\Dell\\.vscode\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\Dell\\.vscode\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.sqljdbc42.jar=C:\\Users\\Dell\\.vscode\\sqljdbc42.jar
@@ -51,8 +54,11 @@ javac.classpath=\
     ${file.reference.httpclient-4.5.5.jar}:\
     ${file.reference.httpcore-4.4.9.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.jakarta.activation-api-2.0.1.jar}:\
+    ${file.reference.jakarta.mail-2.0.1.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.commons-email-1.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
